Add cursor to enumerate all urls in milvus
